# a-likely-story

./: AGENTS.md  CNAME  README.md  about.html  chapters.html  chapters.json  generate_chapter.py  index.html  pyproject.toml  rss.xml
.github/workflows/: pages.yml
chapters/: 001.html  002.html  003.html  004.html  005.html  006.html  007.html  008.html  009.html  010.html  011.html  012.html  013.html  014.html  015.html  016.html  017.html  018.html  019.html  020.html  021.html  022.html  023.html  024.html  025.html  026.html  027.html  028.html  029.html  030.html  031.html  032.html  033.html  034.html  035.html
css/: design-tokens.css  style.css
manuscript/: 2026-01-01.md  2026-01-02.md  2026-01-03.md  2026-01-04.md  2026-01-05.md  2026-01-06.md  2026-01-07.md  2026-01-08.md  2026-01-09.md  2026-01-10.md  2026-01-11.md  2026-01-12.md  2026-01-13.md  2026-01-14.md  2026-01-15.md  2026-01-16.md  2026-01-17.md  2026-01-18.md  2026-01-19.md  2026-01-20.md  2026-01-21.md  2026-01-22.md  2026-01-23.md  2026-01-24.md  2026-01-25.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md  2026-01-31.md  2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04.md
scripts/: publish.py
story/: bible.json  character.yaml  timeline.ndjson
templates/: chapter_template.html
