[project]
name = "alikelystory"
version = "0.1.0"
description = "A Likely Story — a daily, live-updating cozy serial (static site + generator scripts)."
requires-python = ">=3.11"
dependencies = [
  "Markdown>=3.6",
  "PyYAML>=6.0",
]

[project.scripts]
# Optional convenience entrypoints (work when installed). For now we use: `uv run python scripts/publish.py ...`

